crates/solidity/testing/snapshots/bindings_output/enums/decls/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword.
    ╭─[ input.sol:13:1 ]
    │
 13 │ enum ActionChoices { GoLeft, GoRight, GoStraight, SitStill }
    │ ──────────────────────────────┬──────────────────────────────  
    │                               ╰──────────────────────────────── Error occurred here.
────╯
[39mReferences and definitions:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── name: 1
  2 │     enum Answer { Yes, No }
    │          ───┬──   ─┬─  ─┬  
    │             ╰────────────── name: 2
    │                    │    │  
    │                    ╰─────── name: 3
    │                         │  
    │                         ╰── name: 4
    │ 
  5 │ library LibTest {
    │         ───┬───  
    │            ╰───── name: 5
  6 │     enum Respuesta { Si, No }
    │          ────┬────   ─┬  ─┬  
    │              ╰─────────────── name: 6
    │                       │   │  
    │                       ╰────── name: 7
    │                           │  
    │                           ╰── name: 8
    │ 
  9 │ interface Iface {
    │           ──┬──  
    │             ╰──── name: 9
 10 │     enum Repondre { Oui, Non }
    │          ────┬───   ─┬─  ─┬─  
    │              ╰──────────────── name: 10
    │                      │    │   
    │                      ╰──────── name: 11
    │                           │   
    │                           ╰─── name: 12
────╯
[39mDefiniens:[0m 
    ╭─[ input.sol:1:1 ]
    │
  1 │ ╭─▶ contract Test {
    ┆ ┆   
  3 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 1
    │
    ├─[ input.sol:1:1 ]
    │
  2 │         enum Answer { Yes, No }
    │     ──────────────┬────┬────┬───  
    │                   ╰─────────────── definiens: 2
    │                        │    │     
    │                        ╰────────── definiens: 3
    │                             │     
    │                             ╰───── definiens: 4
    │ 
  4 │ ╭─▶ 
    ┆ ┆   
  7 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 5
    │
    ├─[ input.sol:1:1 ]
    │
  6 │         enum Respuesta { Si, No }
    │     ───────────────┬──────┬───┬───  
    │                    ╰──────────────── definiens: 6
    │                           │   │     
    │                           ╰───────── definiens: 7
    │                               │     
    │                               ╰───── definiens: 8
    │ 
  8 │ ╭─▶ 
    ┆ ┆   
 11 │ ├─▶ }
    │ │       
    │ ╰─────── definiens: 9
    │
    ├─[ input.sol:1:1 ]
    │
 10 │     enum Repondre { Oui, Non }
    │ ───────────────┬─────┬────┬────  
    │                ╰───────────────── definiens: 10
    │                      │    │      
    │                      ╰─────────── definiens: 11
    │                           │      
    │                           ╰────── definiens: 12
────╯
